<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="@dimen/_50sdp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/ajuda_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/ajuda"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">


            </TextView>

            <TextView
                android:id="@+id/ajuda_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/ajuda_texto1"
                android:textAlignment="textStart"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/_12ssp">

            </TextView>

            <TextView
                android:id="@+id/help_eixo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/eixo_texto"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">


            </TextView>

            <ImageView
                android:layout_width="267dp"
                android:layout_height="318dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:contentDescription="@string/simbolo_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/help_eixo"
                app:srcCompat="@drawable/help_categorias">


            </ImageView>

            <TextView
                android:id="@+id/search_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/pesquisa"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">


            </TextView>

            <TextView
                android:id="@+id/search_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/howtosearch_text"
                android:textAlignment="textStart"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/_12ssp">

            </TextView>

            <ImageView

                android:layout_width="@dimen/_226sdp"
                android:layout_height="@dimen/_199sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_150sdp"
                android:contentDescription="@string/simbolo_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/help_eixo"
                app:srcCompat="@drawable/help_pesquisa">


            </ImageView>







        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/navibutton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>